--- a/html-mockup/dashboard.html
+++ b/html-mockup/dashboard.html
@@ -11,11 +11,11 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-gray-600">
     <!-- Side Bar  -->
     <aside aria-label="Sidebar">
         <!-- Top Logo -->
-        <div class="overflow-y-auto pt-7 pb-4 px-9 dark:bg-gray-800  ">
+        <div class="overflow-y-auto pt-7 pb-4 px-9 dark:bg-gray-800">
             <div
                 class="xl:rounded-r transform  xl:translate-x-0  ease-in-out transition duration-500 flex justify-start items-start h-full  w-full sm:w-64 flex-col">
                 <a href="dashboard.html" class="flex items-center pl-2.5 mb-5">
@@ -129,7 +129,7 @@
                     </button>
                 </div>
                 <!-- Bottom Part Navbar -->
-                <div class=" flex justify-between items-center w-full">
+                <div class=" flex justify-between items-center w-full absolute bottom-10 ml-10">
                     <div class="flex justify-start flex-col items-start">
                             <button
                                 class="flex justify-start items-center space-x-6 hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2  w-52">
@@ -149,7 +149,24 @@
             </div>
         </div>
     </aside>
-
+    <footer class="p-4 bg-white rounded-lg shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800">
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+        </span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm text-gray-500 dark:text-gray-400 sm:mt-0">
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+            </li>
+            <li>
+                <a href="#" class="hover:underline">Contact</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
